# classifier-triage

./: .gitignore  README.md  pyproject.toml  uvicorn.sh
app/: config.py  main.py  predictor.py  schemas.py
app/api/: controller.py
app/classifier/: classifier.py  model_loader.py  triage_input.py  validator.py
notebook/: eda.ipynb  evaluation.ipynb  pipelines.ipynb  preprocess.ipynb  train.ipynb
notebook/data/: dataset_clean.csv  dataset_encoded.csv  dataset_preprocess.csv  dataset_selected.csv
