[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier-triage"
version = "0.1.0"
description = "Microservicio de triaje médico con FastAPI e IA (modelo scikit-learn)"
authors = [
    { name = "Raulinho-A" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "joblib",
    "pydantic"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]